--- a/index.html
+++ b/index.html
@@ -12,6 +12,24 @@
     <link rel="stylesheet" href="./css/fontawesome.min.css">
 </head>
 <body>
-  
+  <nav class="navbar">
+       <div class="logo">
+             <div class="logo-img">
+                <img src="./img/images (3).png">
+             </div>
+            <h4>akareya</h4>
+       </div>
+
+       <div class="manu">
+              <ul>
+                     <li><a href="#">HOME</a></li>
+                     <li><a href="#">GALLary</a></li>
+                     <li><a href="#">SERVICE</a></li>
+                     <li><a href="#">ABOUT</a></li>
+                     <li><a href="#">CONTACT</a></li>
+               </ul>
+       </div>
+       
+  </nav>
 </body>
 </html>
