--- a/index.html
+++ b/index.html
@@ -18,17 +18,18 @@
                 <img src="./img/images (3).png">
              </div>
             <h4>akareya</h4>
-       </div>
 
-       <div class="manu">
-              <ul>
-                     <li><a href="#">HOME</a></li>
-                     <li><a href="#">GALLary</a></li>
-                     <li><a href="#">SERVICE</a></li>
-                     <li><a href="#">ABOUT</a></li>
-                     <li><a href="#">CONTACT</a></li>
-               </ul>
        </div>
+    <input type="checkbox" id="check">
+    <label class="bar-btn"  for="check"> <i class="fa-solid fa-bars"></i> </label> 
+
+       <ul>
+          <li><a class="active" href="#">home</a></li>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Service</a></li>
+          <li><a href="#">about</a></li>
+          <li><a href="#">News</a></li>
+       </ul>
        
   </nav>
 </body>
